--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,8 @@
     "mongoose": "7.0.3",
     "body-parser": "1.20.2",
     "cors": "2.8.5",
-    "dotenv": "16.0.3"
+    "dotenv": "16.0.3",
+    "minimist": "0.0.8"
   },
   "devDependencies": {
     "nodemon": "2.0.22"
@@ -19,4 +20,3 @@
     "dev": "nodemon server.js"
   }
 }
-
