--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,8 +6,9 @@
   "dependencies": {
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "lodash": "4.17.21",
-    "moment": "2.29.4"
+    "lodash": "4.17.4",
+    "moment": "2.29.4",
+    "qs": "6.5.0"
   },
   "devDependencies": {
     "webpack": "5.88.0",
@@ -18,4 +19,3 @@
     "build": "echo 'Build frontend'"
   }
 }
-
